42		Add new source files from last change
43		EU3 nation have rulers and rulers have first names
44		getvalue() ignores case
45		Import explicit dynasties
46		Import dynasties from dynasties.txt
47		Export dynasty name with ruler
48		Import history of former rulers and write it out
49		Add Hungary1453_01_01 save
50		Output previous_ruler section
51		Add Sicily save
52		Central Europe Mapped, duplicate mappings removed.
53		Create family trees
54		Merge
55		Lots of blocked nations
56		Children in sorted order in family trees
57		Primogeniture heirs
58		More character information
59		Temporary government of tribal despotism
60		Search up the family tree for primogeniture heirs if needed
61		Eastern Europe mapped.  All mappings (dirty) done.
62		Merge
63		greece & turkey
64		Initial stat conversion
65		Gender laws
66		Merge
67		Unless Absolute Cognatic, female lines only considered after male ones
68		Traits
69		EU3 stats have a minimum of one
70		Actually implement the stats floor
71		Bastards can't be heirs
72		Extrapolate stats for characters younger than 16
73		Stat floors and ceilings implemented
74		Stat floor of 0 for CK2 characters
75		Seniority succession
76		Added 'Lowborn' dynasty
77		Correct lower bound for stats to 3
78		Bonus stats go to lowest stat instead of highest
79		Stat scaling factor doubled
80		Feudal Elective succession
81		Log number of CK2 baronies in each EU3 province
82		Use forward declarations instead of header includes
83		Initial implementation of DasGuntLord01's advisor conversion technique
84		Don't try to get an heir of a title no-one holds (also, the save that exposed this error)
85		No more cloned advisors
86		Titled advisors now included
87		Remove save incompatible with current CK2 version
88		Added Latin_Empire1303_04_27.ck2
89		If an advisor has no home, don't try to place them somewhere
90		Option for advisors now in configuration file
91		No longer count titles help by no-one as independent
92		Lots of advisors