@@ -32,11 +32,6 @@ public:
 		return getInstance()->id++;
 	}
 
-	static string getAdvisorsType()
-	{
-		return getInstance()->advisorsType;
-	}
-
 	static Configuration* getInstance()
 	{
 		if (instance == NULL)
@@ -50,7 +45,6 @@ private:
 	string	CK2Path;
 	string	EU3Path;
 	string	HRETitle;
-	string	advisorsType;
 
 	int		id;
 };
